--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@icons-pack/react-simple-icons": "^9.3.0",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
