--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
     "@icons-pack/react-simple-icons": "^9.3.0",
+    "@splinetool/react-spline": "^2.2.6",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "nodemailer": "^6.9.11",
