--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@hookform/resolvers": "^3.3.4",
     "@icons-pack/react-simple-icons": "^9.3.0",
     "@splinetool/react-spline": "^2.2.6",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "nodemailer": "^6.9.11",
@@ -21,6 +23,7 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-scroll": "^1.9.0",
+    "tsparticles": "^3.3.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
