--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,7 +3,7 @@
     "id": "js-furniture",
     "name": "JS Furniture",
     "description": "A furniture store where customers can find everything they need to furnish their homes with style and comfort.",
-    "img": "ecommerce-admin.png",
+    "img": "js-furniture.png",
     "techstack": [
       "Next JS",
       "TypeScript",
@@ -22,7 +22,7 @@
     "id": "ecommerce-admin",
     "name": "E-commerce Admin",
     "description": "A full-stack e-commerce admin app that users can create, manage, and link their online stores with various APIU+2019s.",
-    "img": "js-furniture.png",
+    "img": "ecommerce-admin.png",
     "techstack": [
       "Next JS",
       "TypeScript",
@@ -38,5 +38,29 @@
       "live": "https://ecommerce-admin-woad-eta.vercel.app/"
     },
     "figma_link": "https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fwvb1p9EU9TKI0ezntZPQAe%2FE-COMMERCE-ADMIN%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DuCqEiFvHmK4QCycq-1"
+  },
+  {
+    "id": "pcrs",
+    "name": "Pet Carrier Rental System",
+    "description": "Our undergraduate thesis project, an Iot-based pet carrier rental system for malls that allows pet owners to rent pet carriers for their pets and track their location in real-time.",
+    "img": "pcrs.png",
+    "techstack": [
+      "Node JS",
+      "TypeScript",
+      "Express",
+      "Next JS",
+      "MySQL",
+      "Tailwind CSS",
+      "Shadcn UI",
+      "Clerk",
+      "Socket IO",
+      "Arduino"
+    ],
+    "featured": true,
+    "links": {
+      "github": "",
+      "live": "https://pet-carrier-rms.vercel.app/"
+    },
+    "figma_link": "https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fdesign%2FP4x7CObhuayuJrPPuMkSlO%2FPCRS%3Fnode-id%3D0-1%26t%3Dsk4ADw3marjmCZ5e-1"
   }
 ]
