--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "nodemailer": "^6.9.11",
+    "nodemailer-mailgun-transport": "^2.1.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer-mailgun-transport": "^1.4.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-scroll": "^1.8.10",
