--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@hookform/resolvers": "^3.3.4",
     "@icons-pack/react-simple-icons": "^9.3.0",
     "@splinetool/react-spline": "^2.2.6",
+    "@tabler/icons-react": "^3.26.0",
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "nodemailer": "^6.9.11",
@@ -25,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
     "react-scroll": "^1.9.0",
+    "tailwind-merge": "^2.5.5",
     "tsparticles": "^3.3.0",
     "yup": "^1.3.3"
   },
