--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
@@ -18,11 +17,11 @@
     "@tsparticles/react": "^3.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
-    "next": "15.3.3",
+    "next": "16.1.3",
     "nodemailer": "^6.9.11",
     "nodemailer-mailgun-transport": "^2.1.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
@@ -39,12 +38,12 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "@types/react-scroll": "^1.8.10",
-    "eslint": "^8",
-    "eslint-config-next": "15.3.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.3",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.12",
-    "tailwindcss": "^4.1.8",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
