--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "prettier-plugin-tailwindcss": "^0.6.12",
     "tailwindcss": "^4.1.18",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=24"
   }
 }
